--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-tw">
+<html lang="zh-tw" ng-app>
 <head>
   <!-- Basic info -->
   
@@ -52,6 +52,7 @@
   <!-- JS -->
   <script src="js/jquery/jquery.min.js"></script>
   <script src="js/bootstrap/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <!-- JS  -->
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -60,6 +61,7 @@
   <![endif]-->
 </head>
 <body class="main-page">
+  <!-- Navbar ================================================== -->
   <div class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-inner">
       <div class="container">
@@ -71,26 +73,96 @@
         <a class="brand" href="#">
           <span class="hidden-phone">Vincent's</span>
         </a>
-        <div class="nav-no-collapse header-nav">
-          <ul class="nav pull-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#"><i class="icon-user"></i> 帳號資訊</a></li>
-                <li><a href="<?=base_url()?>user/logout"><i class="icon-off"></i> 登出</a></li>
-              </ul>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <li class="active">
+              <a href="./index.html">Home</a>
+            </li>
+            <li class="">
+              <a href="./getting-started.html">About Me</a>
+            </li>
+            <li class="">
+              <a href="./scaffolding.html">My Skills</a>
+            </li>
+            <li class="">
+              <a href="./base-css.html">My Works</a>
             </li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
   </div>
 
+  <!-- Header Banner ================================================== -->
   <header id="overview" class="header-banner">
     <div class="container">
-      <h1>Customize and download</h1>
-      <p class="lead"><a href="https://github.com/twitter/bootstrap/zipball/master">Download Bootstrap</a> or customize variables, components, JavaScript plugins, and more.</p>
+      <h1>Hi, I'm Li Xuan <small>(澧萱)</small></h1>
+      <p class="lead">I'm playing with php, objective-C and more.</p>
     </div>
   </header>
+
+
+  <!-- Main container ================================================== -->
+  <div class="container main-container">
+    <h1>Who am I</h1>
+    <div class="row row-portfolio">
+      <div class="span12">I'm Li-Xuan Chen <small class="muted">(陳澧萱, Vincent Chen or vince78718)</small>, I came from <a href="https://maps.google.com/maps?q=taiwan">Taiwan</a>. I playing with codes and some new techs.</div>
+    </div>
+
+    <h1>What I am doing</h1>
+    <div class="row row-portfolio">
+      <div class="span4">
+        <center>
+          <span class="icon-globe work"></span>
+          <hr>
+          <h2 class="text-info">Web</h2>
+          <p>I developing web systems using <strong>Javascript</strong>, <strong>PHP</strong> and <strong>MySQL</strong> on LAMP server. Familiar with <strong>MVC</strong> framwork, having some experience on <strong>Web API</strong>.</p>
+        </center>
+      </div>
+      <div class="span4">
+        <center>
+          <span class="icon-mobile-phone work"></span>
+          <hr>
+          <h2 class="text-info">Mobile</h2>
+          <p>I mainly developing <strong>iOS</strong> apps now, having developing an <strong>Android</strong> game in the past.</p>
+        </center>
+      </div>
+      <div class="span4">
+        <center>
+          <span class="icon-hand-up work"></span>
+          <hr>
+          <h2 class="text-info">Play</h2>
+          <p>Not only digging into world of codes, I playing <strong>Diablo III</strong> <small class="muted">(Oh, yaaa!)</small>, riding bikes, watching movies and playing some games on Facebook and Mobile.</p>
+        </center>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer ================================================== -->
+  <footer class="footer">
+      <div class="container">
+        <p>Copyright &copy; 2013, <a href="mailto:vince78718@gmail.com">Vincent Chen</a></p>
+        <p>This site is build with love of
+          <a href="http://twitter.github.io/bootstrap">Bootstrap</a>, 
+          <a href="http://jquery.com/">jQuery</a>,
+          <a href="http://www.google.com/fonts">Google Fonts</a> and
+          <a href="http://fancybox.net/">fancybox</a>
+        </p>
+        <p>Using 
+          <a href="http://github.com/">Github</a>, 
+          <a href="http://lesscss.org/">Less</a>,
+          <a href="http://www.sublimetext.com/">Sublime Text</a>
+        </p>
+        <ul class="footer-links">
+          <li><a href="http://gblog.vincentis.me" target="_blank">Blog</a></li>
+          <li class="muted">·</li>
+          <li><a href="https://github.com/vince78718/" target="_blank">Github Repos</a></li>
+          <li class="muted">·</li>
+          <li><a href="https://gist.github.com/vince78718/" target="_blank">Github Gist</a></li>
+          <li class="muted">·</li>
+          <li><a href="https://bitbucket.org/vince78718" target="_blank">Bitbucket</a></li>
+        </ul>
+      </div>
+    </footer>
 
 </body>
