Change Map setting.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div id='map' class="span12"></div>
       <script type='text/javascript'>
         var map = L.mapbox.map('map', 'vince78718.map-6z5j80z7', {zoomControl: false}).setView([23.633333, 121.633333], 6);
-        
+
         // disable drag and zoom handlers
         map.dragging.disable();
         map.touchZoom.disable();
@@ -149,7 +149,7 @@
           <span class="icon-hand-up work"></span>
           <hr>
           <h2 class="text-info">Play</h2>
-          <p>Not only digging into world of codes, I playing <strong>music</strong> <small class="muted">(violin and piano)</small>, <strong>Diablo III</strong> <small class="muted">(Oh, yaaa!)</small>, riding bikes, watching movies and playing some games on Facebook and Mobile.</p>
+          <p>Not only digging into world of codes, I also playing <strong>music</strong> <small class="muted">(violin and piano)</small>, <strong>Diablo III</strong> <small class="muted">(Oh, yaaa!)</small>, riding bikes, watching movies and playing some games on Facebook and Mobile.</p>
         </center>
       </div>
     </div>
@@ -162,7 +162,8 @@
         <p>This site is build with love of
           <a href="http://twitter.github.io/bootstrap">Bootstrap</a>, 
           <a href="http://jquery.com/">jQuery</a>,
-          <a href="http://www.google.com/fonts">Google Fonts</a>
+          <a href="http://www.google.com/fonts">Google Fonts</a>,
+          <a href="http://mapbox.com">MapBox</a>
         </p>
         <p>Using 
           <a href="http://github.com/">Github</a>, 
