add little footer on the header banner.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <div class="container">
       <h1>Hi, I'm Li Hsuan <small>(澧萱)</small></h1>
       <p class="lead">I'm playing with php, objective-C and more.</p>
+      <footer><span class="icon-comment"></span><span class=""> And, oh! You can checkout this page on iPad or iPhone too!</span></footer>
     </div>
   </header>
 
