Alter the content.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <span class="icon-globe work"></span>
           <hr>
           <h2 class="text-info">Web</h2>
-          <p>I developing web systems using <strong>Javascript</strong>, <strong>PHP</strong> and <strong>MySQL</strong> on LAMP server. Familiar with <strong>MVC</strong> framwork, having some experience on <strong>Web API</strong>.</p>
+          <p>I'm developing web systems using <strong>Javascript</strong>, <strong>PHP</strong> and <strong>MySQL</strong> on LAMP server. Familiar with <strong>MVC</strong> framwork, having some experience on <strong>Web API</strong>.</p>
         </center>
       </div>
       <div class="span4">
@@ -142,7 +142,7 @@
           <span class="icon-mobile-phone work"></span>
           <hr>
           <h2 class="text-info">Mobile</h2>
-          <p>I mainly developing <strong>iOS</strong> apps now, having developing an <strong>Android</strong> game in the past.</p>
+          <p>I'm mainly developing <strong>iOS</strong> apps now, having developing an <strong>Android</strong> game in the past.</p>
         </center>
       </div>
       <div class="span4">
