update css and content.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="language" content="zh_TW">
   <meta http-equiv="content-language" content="zh_TW">
+  <link rel="canonical" href="http://vince78718.github.io/">
+  <!-- 
   <meta name="apple-itunes-app" content="app-id=634470009, affiliate-data=partnerId=2064962">
-  <link rel="shortcut icon" href="http://thenextweb.com/favicon.ico" type="image/x-icon">
-  <link rel="canonical" href="http://thenextweb.com/conference/latinamerica/speakers/">
+  <link rel="shortcut icon" href="http://thenextweb.com/favicon.ico" type="image/x-icon"> -->
 
   <!-- Bootstrap -->
   <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
