add robot follow

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="language" content="zh_TW">
   <meta http-equiv="content-language" content="zh_TW">
   <link rel="canonical" href="http://vince78718.github.io/">
+  <meta name="robots" content="index, follow">
   <!-- 
   <meta name="apple-itunes-app" content="app-id=634470009, affiliate-data=partnerId=2064962">
   <link rel="shortcut icon" href="http://thenextweb.com/favicon.ico" type="image/x-icon"> -->
