--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <!-- iOS Webapp end -->
 
   <!-- JS -->
+  <script src="js/app.js"></script>
   <script src="js/jquery/jquery.min.js"></script>
   <script src="js/bootstrap/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
