add google analytics and html5 badge, and google author

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
   <!-- iOS Webapp end -->
 
   <!-- JS -->
-  <script src="js/app.js"></script>
   <script src="js/jquery/jquery.min.js"></script>
   <script src="js/bootstrap/bootstrap.min.js"></script>
+  <script src="js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <script src='//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.js'></script>
   <!-- JS  -->
@@ -163,6 +163,7 @@
   <footer class="footer">
       <div class="container">
         <p>Copyright &copy; 2013, <a href="mailto:vince78718@gmail.com">Vincent Chen</a></p>
+        <p> <span class="label">v 1.0</span></p>
         <p>This site is build with love of
           <a href="http://twitter.github.io/bootstrap">Bootstrap</a>, 
           <a href="http://jquery.com/">jQuery</a>,
@@ -182,7 +183,13 @@
           <li><a href="https://gist.github.com/vince78718/" target="_blank">Github Gist</a></li>
           <li class="muted">·</li>
           <li><a href="https://bitbucket.org/vince78718" target="_blank">Bitbucket</a></li>
+          <li class="muted">·</li>
+          <li><a href="https://plus.google.com/117753885121916049852?rel=author" target="_blank">Google+</a></li>
         </ul>
+        <br>
+        <a href="http://www.w3.org/html/logo/">
+          <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device.png" width="82" height="32" alt="HTML5 Powered with CSS3 / Styling, and Device Access" title="HTML5 Powered with CSS3 / Styling, and Device Access">
+        </a>
       </div>
     </footer>
 
