add www.schema.org tag attributes

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
   <!-- Main container ================================================== -->
   <div class="container main-container">
     <h1>Who am I</h1>
-    <div class="row row-portfolio">
-      <div class="span12">I'm Li-Hsuan Chen <small class="muted">(陳澧萱, Vincent Chen or vince78718)</small>, I came from <a href="https://maps.google.com/maps?q=taiwan">Taiwan</a> <small class="muted">(台灣)</small>. I playing with codes and some new techs.</div>
+    <div class="row row-portfolio" itemscope itemtype="http://www.schema.org/Person">
+      <div class="span12">I'm Li-Hsuan Chen <small class="muted">(陳澧萱, <span itemprop="name">Vincent Chen</span> or vince78718)</small>, I came from <a href="https://maps.google.com/maps?q=taiwan"><span itemprop="nationality">Taiwan</span></a> <small class="muted">(台灣)</small>. I playing with codes and some new techs.</div>
       <div id='map' class="span12"></div>
       <script type='text/javascript'>
         var map = L.mapbox.map('map', 'vince78718.map-6z5j80z7', {zoomControl: false}).setView([23.633333, 121.633333], 6);
