test some angular stuff.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 <body class="main-page">
   <!-- Navbar ================================================== -->
-  <div class="navbar navbar-fixed-top navbar-inverse">
+  <div class="navbar navbar-fixed-top navbar-inverse" ng-controller="IndexController">
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
