--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-tw" ng-app>
+<html lang="zh-tw">
 <head>
   <!-- Basic info -->
   
@@ -57,9 +57,9 @@
   <!-- JS -->
   <script src="js/jquery/jquery.min.js"></script>
   <script src="js/bootstrap/bootstrap.min.js"></script>
-  <script src="js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <script src='//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.js'></script>
+  <script src="js/app.js"></script>
   <!-- JS  -->
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -70,112 +70,75 @@
     <link href='//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.ie.css' rel='stylesheet' >
   <![endif]-->
 </head>
-<body class="main-page">
-  <!-- Navbar ================================================== -->
-  <div class="navbar navbar-fixed-top navbar-inverse">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">
-          <span>Vincent's</span>
-        </a>
-        <div class="nav-collapse collapse">
-          <ul class="nav">
-            <li class="active">
-              <a href="#">Home</a>
-            </li>
-            <li class="">
-              <a href="#">About Me</a>
-            </li>
-            <li class="">
-              <a href="#">My Skills</a>
-            </li>
-            <li class="">
-              <a href="#">My Works</a>
-            </li>
-          </ul>
+<body class="main-page" ng-app="ngView">
+  <div ng-controller="MainController" >
+    <!-- Navbar ================================================== -->
+    <div class="navbar navbar-fixed-top navbar-inverse">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">
+            <span>Vincent's</span>
+          </a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active">
+                <a ng-href="{{root_url}}">Home</a>
+              </li>
+              <li class="">
+                <a ng-href="{{root_url}}about">About Me</a>
+              </li>
+              <li class="">
+                <a ng-href="{{root_url}}skills">My Skills</a>
+              </li>
+              <li class="">
+                <a ng-href="{{root_url}}works">My Works</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Header Banner ================================================== -->
-  <header id="overview" class="header-banner">
-    <div class="container">
-      <h1>Hi, I'm Li Hsuan <small>(澧萱)</small></h1>
-      <p class="lead">I'm playing with php, objective-C and more.</p>
-      <footer><span class="icon-comment"></span><span class=""> And, oh! You can checkout this page on iPad or iPhone too!</span></footer>
-    </div>
-  </header>
+    <div ng-view></div>
 
-
-  <!-- Main container ================================================== -->
-  <div class="container main-container">
-    <h1>Who am I</h1>
-    <div class="row row-portfolio" itemscope itemtype="http://www.schema.org/Person">
-      <div class="span12">I'm Li-Hsuan Chen <small class="muted">(陳澧萱, <span itemprop="name">Vincent Chen</span> or vince78718)</small>, I came from <a href="https://maps.google.com/maps?q=taiwan"><span itemprop="nationality">Taiwan</span></a> <small class="muted">(台灣)</small>. I playing with codes and some new techs.</div>
-      <div id='map' class="span12"></div>
-      <script type='text/javascript'>
-        var map = L.mapbox.map('map', 'vince78718.map-6z5j80z7', {zoomControl: false}).setView([23.633333, 121.633333], 6);
-
-        // disable drag and zoom handlers
-        map.dragging.disable();
-        map.touchZoom.disable();
-        map.doubleClickZoom.disable();
-        map.scrollWheelZoom.disable();
-      </script>
-    </div>
-
-    <h1>What I am doing</h1>
-    <div class="row row-portfolio" ng-controller="HomeController">
-      <div class="span4" ng-repeat="doing in doings">
-        <center>
-          <span class="icon-{{doing.icon}} work"></span>
-          <hr>
-          <h2 class="text-info">{{doing.title}}</h2>
-          <p ng-bind-html-unsafe="doing.content"></p>
-        </center>
-      </div>
-    </div>
-  </div> 
-
-  <!-- Footer ================================================== -->
-  <footer class="footer">
-      <div class="container">
-        <p>Copyright &copy; 2013, <a href="mailto:vince78718@gmail.com">Vincent Chen</a></p>
-        <p> <span class="label">v 1.0</span></p>
-        <p>This site is build with love of
-          <a href="http://twitter.github.io/bootstrap">Bootstrap</a>, 
-          <a href="http://jquery.com/">jQuery</a>,
-          <a href="http://angularjs.org/">Angular.js</a>,
-          <a href="http://www.google.com/fonts">Google Fonts</a>,
-          <a href="http://mapbox.com">MapBox</a>
-        </p>
-        <p>Using 
-          <a href="http://github.com/">Github</a>, 
-          <a href="http://lesscss.org/">Less</a>,
-          <a href="http://www.sublimetext.com/">Sublime Text</a>
-        </p>
-        <ul class="footer-links">
-          <li><a href="http://gblog.vincentis.me" target="_blank">Blog</a></li>
-          <li class="muted">·</li>
-          <li><a href="https://github.com/vince78718/" target="_blank">Github Repos</a></li>
-          <li class="muted">·</li>
-          <li><a href="https://gist.github.com/vince78718/" target="_blank">Github Gist</a></li>
-          <li class="muted">·</li>
-          <li><a href="https://bitbucket.org/vince78718" target="_blank">Bitbucket</a></li>
-          <li class="muted">·</li>
-          <li><a href="https://plus.google.com/117753885121916049852?rel=author" target="_blank">Google+</a></li>
-        </ul>
-        <br>
-        <a href="http://www.w3.org/html/logo/">
-          <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device.png" width="82" height="32" alt="HTML5 Powered with CSS3 / Styling, and Device Access" title="HTML5 Powered with CSS3 / Styling, and Device Access">
-        </a>
-      </div>
+    <!-- Footer ================================================== -->
+    <footer class="footer">
+        <div class="container">
+          <p>Copyright &copy; 2013, <a href="mailto:vince78718@gmail.com">Vincent Chen</a></p>
+          <p> <span class="label">v 1.0</span></p>
+          <p>This site is build with love of
+            <a href="http://twitter.github.io/bootstrap">Bootstrap</a>, 
+            <a href="http://jquery.com/">jQuery</a>,
+            <a href="http://angularjs.org/">Angular.js</a>,
+            <a href="http://www.google.com/fonts">Google Fonts</a>,
+            <a href="http://mapbox.com">MapBox</a>
+          </p>
+          <p>Using 
+            <a href="http://github.com/">Github</a>, 
+            <a href="http://lesscss.org/">Less</a>,
+            <a href="http://www.sublimetext.com/">Sublime Text</a>
+          </p>
+          <ul class="footer-links">
+            <li><a href="http://gblog.vincentis.me" target="_blank">Blog</a></li>
+            <li class="muted">·</li>
+            <li><a href="https://github.com/vince78718/" target="_blank">Github Repos</a></li>
+            <li class="muted">·</li>
+            <li><a href="https://gist.github.com/vince78718/" target="_blank">Github Gist</a></li>
+            <li class="muted">·</li>
+            <li><a href="https://bitbucket.org/vince78718" target="_blank">Bitbucket</a></li>
+            <li class="muted">·</li>
+            <li><a href="https://plus.google.com/117753885121916049852?rel=author" target="_blank">Google+</a></li>
+          </ul>
+          <br>
+          <a href="http://www.w3.org/html/logo/">
+            <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device.png" width="82" height="32" alt="HTML5 Powered with CSS3 / Styling, and Device Access" title="HTML5 Powered with CSS3 / Styling, and Device Access">
+          </a>
+        </div>
     </footer>
-
+  </div>
 </body>
