update variable of url.

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <div class="container main-container">
   <h1>Who am I</h1>
   <h1>What I am doing</h1>
-  <div class="row row-portfolio" ng-controller="AboutController">
+  <div class="row" ng-controller="AboutController">
     <div class="span12" ng-repeat="doing in doings">
       <center>
         <span class="icon-check"></span>
