--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <link href="css/bootstrap/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
 
   <!-- ICONS -->
-  <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen">
-  <link href="css/font-awesome/css/font-awesome-ie7.min.css" rel="stylesheet" media="screen">
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <!--  Map Box CSS -->
   <link href='//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.css' rel='stylesheet' />
@@ -153,20 +153,112 @@
 
       <h1 id="skills">My Skills</h1>
       <div class="row">
-        <div class="span6">
+        <div class="span12">
           <h2>Languages</h2>
           <h3>HTML</h3>
           <div class="progress progress-striped">
             <div class="bar" style="width: 82%"></div>
           </div>
-          <h3>PHP</h3>
+          <h3>PHP <small>Pure PHP, MVC framework, Web API</small></h3>
           <div class="progress progress-striped">
             <div class="bar" style="width: 80%"></div>
           </div>
-          <h3>Objective-C</h3>
-          <div class="progress progress-striped">
+          <h3>Objective-C <small>iOS</small></h3>
+          <div class="progress progress-danger progress-striped">
             <div class="bar" style="width: 70%"></div>
           </div>
+          <h3>Javascript <small>Pure javascript, jQuery, Angular.js</small></h3>
+          <div class="progress progress-striped">
+            <div class="bar" style="width: 60%"></div>
+          </div>
+          <h3>ASP.NET with C# </h3>
+          <div class="progress progress-striped">
+            <div class="bar" style="width: 53%"></div>
+          </div>
+          <h3>Java <small>Pure Java, Android</small></h3>
+          <div class="progress progress-striped">
+            <div class="bar" style="width: 40%"></div>
+          </div>
+          <h3>C/C++ <small>Pure C/C++, OpenGL</small></h3>
+          <div class="progress progress-striped">
+            <div class="bar" style="width: 30%"></div>
+          </div>
+
+          <h2>Others <small>which enhanced my works.</small></h2>
+          <p><strong>Programming: </strong>Git, Svn</p>
+          <p><strong>Framework: </strong>Codeigniter</p>
+          <p><strong>Graphics: </strong>Photoshop, Illustrator, InDesign, Maya</p>
+          <p><strong>Server: </strong>Linux<small class="muted">(LAMP)</small></p>
+        </div>
+      </div>
+      <hr>
+
+      <h1 id="skills">My Works</h1>
+      <div class="row">
+        <div class="span12">
+          <table class="table table-hover table-bordered table-striped">
+            <thead>
+              <tr>
+                <td class="span8">Title</td>
+                <td class="span2">Type</td>
+                <td class="span2">Year</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <div class="media">
+                    <a class="pull-left" href="#">
+                      <img class="media-object" src="http://cdn.appshopper.com/icons/666/613910_larger.png" width="90">
+                    </a>
+                    <div class="media-body">
+                      <h3>Plus <small><a href="https://itunes.apple.com/us/app/id666613910?mt=8" target="_blank"><span class="icon-external-link icon-mini"></span></a></small></h3>
+                      <small><i>All <span class="muted">(Highest Ranking: #3 in Productivity>New)</span></i></small>
+                    </div>
+                  </div>
+                </td>
+                <td><center>iPhone, iPad</center></td>
+                <td><center>2013</center></td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="media">
+                    <a class="pull-left" href="#">
+                      <img class="media-object" src="http://cdn.appshopper.com/icons/607/572666_larger.png" width="90">
+                    </a>
+                    <div class="media-body">
+                      <h3>iPass Scanner <small><a href="https://itunes.apple.com/tw/app/ipass-scanner/id607572666?mt=8" target="_blank"><span class="icon-external-link icon-mini"></span></a></small></h3>
+                      <small><i>All</i></small>
+                    </div>
+                  </div>
+                </td>
+                <td><center>iPhone</center></td>
+                <td><center>2013</center></td>
+              </tr>
+              <tr>
+                <td>
+                  <h3>Passbank - Passbook Management System</h3>
+                  <small><i>System Analysist, Programming</i></small>
+                </td>
+                <td><center>PHP</center></td> 
+                <td><center>2013</center></td> 
+              </tr>
+              <tr>
+                <td>
+                  <h4>新北市促進民眾參與公共建設管理系統</h4>
+                  <small><i>Programming(C#)</i></small>
+                </td>
+                <td><center>ASP.NET with C#</center></td> 
+                <td><center>2012</center></td> 
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="span12">
+          <h2>Other Experiences</h2>
+          <ol>
+            <li>Meeting for cooperation project in Japan. (2013)</li>
+          </ol>
         </div>
       </div>
       <hr>
