--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta http-equiv="content-language" content="zh_TW">
   <link rel="canonical" href="http://vince78718.github.io/">
   <meta name="robots" content="index, follow">
-  <!-- 
-  <meta name="apple-itunes-app" content="app-id=634470009, affiliate-data=partnerId=2064962">
-  <link rel="shortcut icon" href="http://thenextweb.com/favicon.ico" type="image/x-icon"> -->
+  
+  <meta name="apple-itunes-app" content="app-id=666613910">
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -37,21 +37,21 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!-- iPhone -->
-  <!-- <link rel="apple-touch-icon" sizes="57x57" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 320px)" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-startup-image-320x460.png"> -->
+  <link rel="apple-touch-icon" sizes="57x57" href="image/ios/apple-touch-icon-57x57.png">
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 320px)" href="image/ios/apple-touch-startup-image-320x460.png"> -->
   <!-- iPhone (Retina) -->
-  <!-- <link rel="apple-touch-icon" sizes="114x114" href="ios/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-startup-image-640x920.png"> -->
+  <link rel="apple-touch-icon" sizes="114x114" href="ios/apple-touch-icon-114x114.png">
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" href="image/ios/apple-touch-startup-image-640x920.png"> -->
   <!-- iPhone 5 -->
-  <!-- <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="ios/apple-touch-startup-image-640x1096.png"> -->
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="image/ios/apple-touch-startup-image-640x1096.png"> -->
   <!-- iPad -->
-  <!--   <link rel="apple-touch-icon" sizes="72x72" href="ios/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: portrait)" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-startup-image-768x1004.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: landscape)" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-startup-image-748x1024.png"> -->
+  <link rel="apple-touch-icon" sizes="72x72" href="image/ios/apple-touch-icon-72x72.png">
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: portrait)" href="image/ios/apple-touch-startup-image-768x1004.png"> -->
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: landscape)" href="image/ios/apple-touch-startup-image-748x1024.png"> -->
   <!-- iPad (Retina) -->
-  <!-- <link rel="apple-touch-icon" sizes="144x144" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-startup-image-1536x2008.png">
-  <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="http://thenextweb.com/conference/latinamerica2013/ios/apple-touch-startup-image-1496x2048.png"> -->
+  <link rel="apple-touch-icon" sizes="144x144" href="image/ios/apple-touch-icon-144x144.png">
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="image/ios/apple-touch-startup-image-1536x2008.png"> -->
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 768px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="image/ios/apple-touch-startup-image-1496x2048.png"> -->
   <!-- iOS Webapp end -->
 
   <!-- JS -->
