--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="language" content="zh_TW">
   <meta http-equiv="content-language" content="zh_TW">
-  <link rel="canonical" href="http://vince78718.github.io/">
+  <link rel="canonical" href="http://vc7.co/">
   <meta name="robots" content="index, follow">
   
   <meta name="apple-itunes-app" content="app-id=666613910">
