--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-tw" ng-app>
+<html lang="en_US" ng-app>
 <head>
   <!-- Basic info -->
   
@@ -9,12 +9,11 @@
   <meta name="description" content="This is Vincent's Portfolio on Github">
   <meta name="author" content="Vincent Chen">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="language" content="zh_TW">
-  <meta http-equiv="content-language" content="zh_TW">
-  <link rel="canonical" href="http://vc7.co/">
+  <meta name="language" content="en_US">
+  <meta http-equiv="content-language" content="en_US">
+  <link rel="canonical" href="http://cv.vc7.co/">
   <meta name="robots" content="index, follow">
   
-  <meta name="apple-itunes-app" content="app-id=666613910">
   <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap -->
@@ -436,7 +435,7 @@
           <p>Using 
             <a href="http://github.com/">Github</a>, 
             <a href="http://lesscss.org/">Less</a>,
-            <a href="http://www.sublimetext.com/">Sublime Text</a>
+            <a href="http://www.vim.org/">Vim</a>
           </p>
           <ul class="footer-links">
             <li><a href="http://gblog.vincentis.me" target="_blank">Blog</a></li>
