--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
       <hr>
 
-      <h1 id="skills">My Works</h1>
+      <h1 id="works">My Works</h1>
       <div class="row">
         <div class="span12">
           <table class="table table-hover table-bordered table-striped">
