Altering page structure

--- a/index.html
+++ b/index.html
@@ -169,36 +169,40 @@
       <div class="row">
         <div class="span12">
           <h2>Languages</h2>
-          <h3>PHP <small>Pure PHP, MVC framework, Web API.</small></h3>
-          <div class="progress progress-striped">
-            <div class="bar" style="width: 80%"></div>
-          </div>
-          <h3>Objective-C <small>iOS, custom UI, Web services.</small></h3>
-          <div class="progress progress-danger progress-striped">
-            <div class="bar" style="width: 70%"></div>
-          </div>
-          <h3>Javascript <small>Pure javascript, jQuery, Angular.js.</small></h3>
-          <div class="progress progress-striped">
-            <div class="bar" style="width: 60%"></div>
-          </div>
-          <h3>ASP.NET with C# </h3>
-          <div class="progress progress-striped">
-            <div class="bar" style="width: 53%"></div>
-          </div>
-          <h3>Java <small>Pure Java, Android.</small></h3>
-          <div class="progress progress-striped">
-            <div class="bar" style="width: 40%"></div>
-          </div>
-          <h3>C/C++ <small>Pure C/C++, OpenGL.</small></h3>
-          <div class="progress progress-striped">
-            <div class="bar" style="width: 30%"></div>
-          </div>
+		  <div>
+			  <h3>PHP <small>Pure PHP, MVC framework, Web API.</small></h3>
+			  <div class="progress progress-striped">
+				  <div class="bar" style="width: 80%"></div>
+			  </div>
+			  <h3>Objective-C <small>iOS, custom UI, Web services.</small></h3>
+			  <div class="progress progress-danger progress-striped">
+				  <div class="bar" style="width: 70%"></div>
+			  </div>
+			  <h3>Javascript <small>Pure javascript, jQuery, Angular.js.</small></h3>
+			  <div class="progress progress-striped">
+				  <div class="bar" style="width: 60%"></div>
+			  </div>
+			  <h3>ASP.NET with C# </h3>
+			  <div class="progress progress-striped">
+				  <div class="bar" style="width: 53%"></div>
+			  </div>
+			  <h3>Java <small>Pure Java, Android.</small></h3>
+			  <div class="progress progress-striped">
+				  <div class="bar" style="width: 40%"></div>
+			  </div>
+			  <h3>C/C++ <small>Pure C/C++, OpenGL.</small></h3>
+			  <div class="progress progress-striped">
+				  <div class="bar" style="width: 30%"></div>
+			  </div>
+		  </div>
 
           <h2>Others <small>which enhanced my works.</small></h2>
-          <p><strong>Programming: </strong>Git, Svn</p>
-          <p><strong>Framework: </strong>Codeigniter</p>
-          <p><strong>Graphics: </strong>Photoshop, Illustrator, InDesign, Maya</p>
-          <p><strong>Server: </strong>Linux<small class="muted">(LAMP)</small></p>
+		  <div>
+			  <p><strong>Programming: </strong>Git, Svn</p>
+			  <p><strong>Framework: </strong>Codeigniter</p>
+			  <p><strong>Graphics: </strong>Photoshop, Illustrator, InDesign, Maya</p>
+			  <p><strong>Server: </strong>Linux<small class="muted">(LAMP)</small></p>
+		  </div>
         </div>
       </div>
       <hr>
